Introduce tabbed log output